# agent-acp-bridge

./: .env.example  .gitignore  .post-claude-edit-config.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  slack-app-manifest.json
.claude/: settings.json
.claude/hooks/: lsp-bridge-stop.sh  lsp-bridge.mjs  lsp-diagnostics-check.sh  lsp-servers.yaml  session-start.sh
.github/workflows/: ci.yaml
app/: config.py  main.py
app/acp/: client.py  session.py
app/core/: repo_provider.py  session_manager.py  types.py  update_router.py
app/services/github/: adapter.py  api_client.py  auth.py  models.py  webhooks.py
app/services/linear/: adapter.py  api_client.py  models.py  webhooks.py
app/services/slack/: __init__.py  adapter.py  api_client.py  models.py  socket_client.py
app/session_viewer/: reader.py  router.py  viewer_html.py
history/: ARCHITECTURE_REFACTOR_SUMMARY.md  MULTI_AGENT_PLAN.md  SESSION_PERSISTENCE.md  SLACK_SOCKET_MODE_PLAN.md
reference-docs/: acp-python-sdk.md  acp-spec.md  linear-agents-api.md
skills/github/: SKILL.md
skills/linear/: SKILL.md
skills/slack/: SKILL.md
